// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`should affect error message after formatting 1`] = `
"
<<<<<< before
ERROR: (eofline) /src/tslint/eofline/test.ts[1, 23]: file should end with a newline

======
no error

>>>>>> after
"
`;

exports[`should be pretty after formatting 1`] = `
"
<<<<<< before
console.log(\\"no-eof\\");
======
console.log(\\"no-eof\\");

>>>>>> after
"
`;
